--- a/views/home.ejs
+++ b/views/home.ejs
@@ -14,13 +14,26 @@
 </head>
 
 <body>
-  <div id=headerWrapper>
-    <h1 id=headerWrapper__header>UK University Ranking Data Comparison App</h1>
+  <div id=header>
+    <div id=header__imgWrapper>
+      <img id="header__imgWrapper__img" img src="res/graduation.png" alt="Students Graduating">
+      <div id=header__square>
+        <h1 id=header__square__h1>UK University Ranking Data Comparison App</h1>
+        <div id=header__descWrapper>
+          <p id=header__descWrapper__p>Supporting University Comparison Across Different Ranking Providers Using <br>
+            Data Visaulisations</p>
+          <p id=header__descWrapper__p2>Click the Button Below to view <br> the league table options</p>
+        </div>
+        <div id=header__buttonWrapper>
+            <a id="header__buttonWrapper_button" href="#MenuOptions">↓</a>
+        </div>
+      </div>
+    </div>
   </div>
-  <div id=descWrapper>
-    <p id=descWrapper__p>Select a university ranking dataset to view or select a comparison overview of all three league
-      tables</p>
-  </div>
+
+  <p id=cardsDesc><a id="MenuOptions"></a>
+    Select a university ranking dataset to view <br><br> or <br><br> Select a comparison overview of all three league
+    tables</p>
 
   <div id=cards>
     <div class=card>
