changes to homePage

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,17 +16,78 @@
 
   <div id="navBar">
     <ul id="navBar__options">
+      <a class="anchor" href='#aboutMeWrapper'>
+        <li class=navBar__option>About Me</li>
+      </a>
       <a class="anchor" href="#portfolioWrapper">
         <li class=navBar__option>Portfolio</li>
-      </a>
-      <a class="anchor" href='/aboutme'>
-        <li class=navBar__option>About Me</li>
       </a>
       <a class="anchor" href='/aboutme'>
         <li class=navBar__option>CV</li>
       </a>
     </ul>
   </div>
+
+  <div class="sectionWrapper" id="aboutMeWrapper">
+    <div id="aboutMeWrapper__textWrapper">
+
+      <h2 class="sectionWrapper__h2">About Me</h2>
+
+
+      <p id="aboutMeWrapper__p">As a recent graduate from Newcastle University on track to receive a distinction
+        for a MSc in computer science, I have developed and fostered the technical skills required of a software
+        developer. <br><br>
+        The masters programme has exposed me to a wide variety of programming languages, design patterns & software
+        development models. This has equipped me with a broad range of tools to problem solve by developing clean,
+        testable and high-quality code. Having a strong programming foundation enables me to quickly learn new skills to
+        adapt to the dynamic technology sector.</p>
+
+      <p id="portfolioWrapper__pCloser">Please feel free to explore my website which includes my CV and my latest
+        project
+        seen in the portfolio section.</p>
+
+      <div id="portfolioWrapper__educationWrapper">
+        <p id="portfolioWrapper__educationHeader">Education:</p>
+        <p id="portfolioWrapper__education">
+          Msc Computer Science - Newcastle University<br />
+          BA Hons Business Econommics - Lancaster University<br />
+          BA Hons Business Administration (1st year only) - University of Kent<br />
+        </p>
+      </div>
+
+      <div id="portfolioWrapper__employmentWrapper">
+        <p id="portfolioWrapper__employmentHeader">Employment History:</p>
+        <p id="portfolioWrapper__employment">
+          Fund/Client Administrator - Bank of New York Mellon<br />
+          Summer Intern (E-Commerce) - JAVARA INDIGENOUS INDONESIA<br />
+        </p>
+      </div>
+    </div>
+
+    <div id="portfolioWrapper__skillDiv">
+      <p id="portfolioWrapper__skillListDesc">Skills</p>
+      <ul id="portfolioWrapper__skillList">
+        <li>JavaScript</li>
+        <li>Node.js</li>
+        <li>Java</li>
+        <li>React.js</li>
+        <li>Linux Bash</li>
+        <li>MySQL</li>
+        <li>HTML5</li>
+        <li>D3.js</li>
+        <li>CSS3</li>
+        <li>Git</li>
+        <li>AWS</li>
+        <li>Github</li>
+        <li>MySQL</li>
+        <li>FireBase</li>
+        <li>Android Studio</li>
+      </ul>
+    </div>
+  </div>
+
+  <br height="18px">
+
   <div class="sectionWrapper" id="portfolioWrapper">
     <div class="sectionWrapper__textWrapper">
       <h2 class="sectionWrapper__h2">Portfolio</h2>
@@ -72,21 +133,18 @@
 
   <br height="18px">
 
-  <div class="sectionWrapper" id="aboutMeWrapper">
-    <div class="sectionWrapper__textWrapper">
+  <div class="sectionWrapper" id="cvWrapper">
 
-      <h2 class="sectionWrapper__h2">About Me</h2>
-      <p id="portfolioWrapper__skillListDesc">Skills</p>
-      <ul id="skillList">
-        <li>JavaScript</li>
-        <li>HTML5</li>
-        <li>CSS3</li>
-        <li>MySQL</li>
-        <li>Node.js</li>
-        <li>D3.js</li>
-      </ul>
+    <div id="cvWrapper__cvButtonWrapper">
+      <a download="filename">
+        <div id="cvWrapper__cvButtonWrapper__button">
+          <p>Download</p>
+        </div>
+      </a>
     </div>
+
   </div>
+
 
 </body>
 
