--- a/public/css/index.css
+++ b/public/css/index.css
@@ -2,7 +2,9 @@ html {
   scroll-behavior: smooth;
 }
 
-p, h2, h3 {
+p,
+h2,
+h3 {
   color: white;
 }
 
@@ -11,7 +13,7 @@ p, h2, h3 {
   display: flex;
   align-items: center;
   justify-content: center;
-  border-bottom: 1px solid #A9A9A9;
+  border-bottom: 1px solid #a9a9a9;
 }
 
 #header__h1 {
@@ -24,7 +26,7 @@ p, h2, h3 {
   justify-content: space-around;
 }
 
-#navBar__options{
+#navBar__options {
   display: flex;
   flex-direction: row;
 }
@@ -49,16 +51,14 @@ p, h2, h3 {
   list-style-type: none;
 }
 
-.sectionWrapper{
-  height: 33rem;
+.sectionWrapper {
+  height: 40rem;
   background-color: #161748;
 }
 
 .sectionWrapper__h2 {
   padding-top: 2rem;
 }
-
-
 
 #portfolioWrapper__info__h3 {
   padding-top: 1rem;
@@ -68,13 +68,13 @@ p, h2, h3 {
   padding-top: 1rem;
 }
 
-#portfolioWrapper__buttonAndImg{
+#portfolioWrapper__buttonAndImg {
   display: flex;
   justify-content: space-between;
   padding-top: 2rem;
 }
 
- #portfolioWrapper__ButtonWrapper {
+#portfolioWrapper__ButtonWrapper {
   width: 50%;
   height: 15rem;
 }
@@ -85,12 +85,12 @@ p, h2, h3 {
   font-weight: bolder;
 }
 
-#portfolioWrapper__ImgWrapper{
-    width: 50%;
-    height: 15rem;
+#portfolioWrapper__ImgWrapper {
+  width: 50%;
+  height: 15rem;
 }
 
-#uniRankImg{
+#uniRankImg {
   height: 15rem;
   width: 15rem;
   border-radius: 50%;
@@ -112,13 +112,82 @@ p, h2, h3 {
   margin-left: 1.5rem;
 }
 
-.sectionWrapper__textWrapper{
+.sectionWrapper__textWrapper {
   padding-left: 25%;
+  padding-right: 25%;
 }
 
-.sectionWrapper__textWrapper{
-  padding-left: 25%;
+#portfolioWrapper__skillListDesc {
+  padding-top: 2rem;
 }
+
+#portfolioWrapper__skillList {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+#portfolioWrapper__skillList li {
+  margin: 1rem;
+  min-width: 5rem;
+  color: white;
+}
+
+#aboutMeWrapper__p {
+  padding-top: 2rem;
+  word-spacing: 3px;
+}
+
+#portfolioWrapper__pCloser {
+  padding-top: 2rem;
+  word-spacing: 3px;
+}
+
+#portfolioWrapper__educationWrapper {
+  padding-top: 3rem;
+}
+#portfolioWrapper__educationHeader {
+  padding-bottom: 1rem;
+}
+
+#aboutMeWrapper {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+#aboutMeWrapper__textWrapper {
+  width: 45%;
+  margin-left: 25%;
+}
+
+#portfolioWrapper__skillDiv {
+  width: 20%;
+  margin-left: 5%;
+  margin-right: 5%;
+  margin-top: 3.6rem;
+}
+
+#portfolioWrapper__employmentWrapper {
+  margin-top: 3rem;
+}
+
+#portfolioWrapper__employmentHeader {
+  padding-bottom: 1rem;
+}
+
+#cvWrapper {
+  background-color: red;
+  display: grid;
+  place-items: center;
+}
+
+#cvWrapper__cvButtonWrapper {
+}
+
+#cvWrapper__cvButtonWrapper_button {
+  background-color: grey;
+}
+
 
 /* 
 Green Treeline: #478559
