add CV download Button

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,7 +22,7 @@
       <a class="anchor" href="#portfolioWrapper">
         <li class=navBar__option>Portfolio</li>
       </a>
-      <a class="anchor" href='/aboutme'>
+      <a class="anchor" href='#cvWrapper'>
         <li class=navBar__option>CV</li>
       </a>
     </ul>
@@ -135,14 +135,9 @@
 
   <div class="sectionWrapper" id="cvWrapper">
 
-    <div id="cvWrapper__cvButtonWrapper">
-      <a download="filename">
-        <div id="cvWrapper__cvButtonWrapper__button">
-          <p>Download</p>
-        </div>
-      </a>
-    </div>
-
+    <a class="anchor" id=CvWrapper__downloadButton href="/downloadCV">
+      <p>DownloadCV</p>
+    </a>
   </div>
 
 
