--- a/public/css/index.css
+++ b/public/css/index.css
@@ -2,6 +2,10 @@ html {
   scroll-behavior: smooth;
 }
 
+body{
+  min-width: 1100px;
+}
+
 p,
 h2,
 h3 {
@@ -97,11 +101,11 @@ h3 {
 }
 
 #portfolioWrapper__techListDesc {
-  margin-left: 25%;
+  margin-left: 20%;
 }
 
 #portfolioWrapper__techList {
-  margin-left: 25%;
+  margin-left: 20%;
   padding-top: 2rem;
   display: flex;
   flex-direction: row;
@@ -113,8 +117,8 @@ h3 {
 }
 
 .sectionWrapper__textWrapper {
-  padding-left: 25%;
-  padding-right: 25%;
+  padding-left: 15%;
+  padding-right: 15%;
 }
 
 #portfolioWrapper__skillListDesc {
@@ -125,6 +129,7 @@ h3 {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  min-width: 15rem;
 }
 
 #portfolioWrapper__skillList li {
@@ -157,7 +162,7 @@ h3 {
 
 #aboutMeWrapper__textWrapper {
   width: 45%;
-  margin-left: 25%;
+  margin-left: 20%;
 }
 
 #portfolioWrapper__skillDiv {
@@ -176,13 +181,21 @@ h3 {
 }
 
 #cvWrapper {
-  background-color: red;
   display: grid;
   place-items: center;
 }
 
-#cvWrapper__cvButtonWrapper_button {
+#CvWrapper__downloadButton{
+  display: grid;
+  place-items: center;
+  text-decoration: none;
+  color: white;
+  font-size: xx-large;
   background-color: grey;
+  height: 20%;
+  width: 20%;
+  min-width: 200px;
+  border-radius: 25%/50%;
 }
 
 
