--- a/views/guardianParallelPlot.ejs
+++ b/views/guardianParallelPlot.ejs
@@ -15,7 +15,9 @@
 
   <h1><span id="providerTitle">The Guardian </span>Overall Ranking</h1>
 
-  <svg id="parallelChart" height="780" width="1300"></svg>
+  <div class="chartWrapper">
+    <svg id="parallelChart" height="780" width="1300"></svg>
+  </div>
 
   <button id="button_BarChart"  width="1800"><a href="/guardian/byMetric">View Metrics in Detail</a></button>
 
