--- a/public/css/defaults.css
+++ b/public/css/defaults.css
@@ -4,3 +4,9 @@
   font-family: 'Source Sans Pro', sans-serif;
   }
 
+  .chartWrapper{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 2rem;
+  }
