--- a/views/guardianMetricBarCharts.ejs
+++ b/views/guardianMetricBarCharts.ejs
@@ -20,8 +20,9 @@
     <label for="metricMenu">Select Scoring Metric:</label>
     <select id='metricDropDown' name="metricMenu"></select>
   </div>
-
-  <svg id="chart" height="600" width="1300"></svg>
+  <div class="chartWrapper">
+    <svg id="chart" height="600" width="1300"></svg>
+  </div>
 
   <div id="data" data-xaxis="<%= passedUniData %>"></div>
 </body>
