--- a/views/timesMetricBarCharts.ejs
+++ b/views/timesMetricBarCharts.ejs
@@ -23,7 +23,9 @@
     </select>
   </div>
 
-  <svg id="chart" height="600" width="1300"></svg>
+  <div class="chartWrapper">
+    <svg id="chart" height="600" width="1300"></svg>
+  </div>
 
   <div id="data" data-xaxis="<%= passedUniData %>"></div>
 </body>
