--- a/views/timesParallelPlot.ejs
+++ b/views/timesParallelPlot.ejs
@@ -14,8 +14,10 @@
   <button id="buttonHome"><a href="/">Home</a></button>
 
   <h1><span id="providerTitle">The Sunday Times </span>Overall Ranking</h1>
-
-  <svg id="parallelChart" height="780" width="1300"></svg>
+  
+  <div class="chartWrapper">
+    <svg id="parallelChart" height="780" width="1300"></svg>
+  </div>
 
   <button id="button_BarChart"><a href="/sundayTimes/byMetric">View Metrics in Detail</a></button>
 
