--- a/views/guardianParallelPlot.ejs
+++ b/views/guardianParallelPlot.ejs
@@ -39,7 +39,7 @@
 
   // set InnerVis height & width
   const margin = {
-    top: 25,
+    top: 50,
     right: 0,
     bottom: 10,
     left: 0
@@ -177,7 +177,8 @@
     .each(function (d) { d3.select(this).call(axis.scale(y[d])); })
     .append("text")
     .style("text-anchor", "middle")
-    .attr("y", -9)
+    .attr("transform", d3.transform('rotate(-20)'))
+    .attr("y", -15)
     .text(function (d) { return d; });
 
   //Adds a group to add and store a brush for each scale.
