added Link to ToDoList

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -129,6 +129,22 @@
 
     </div>
 
+    <br>    <br>    <br>
+
+    <div class="sectionWrapper__textWrapper">
+
+      <div id="portfolioWrapper__info">
+        <h3 id="portfolioWrapper__info__h3">React To do List App</h3>
+        <p id="portfolioWrapper__info_p">To do list application that displays dynamic data and saves to local storage
+        </p>
+      </div>
+
+      <a class="anchor" href="https://jeremyelliott1.github.io/react-to-do-list/">
+        <p>Take a Look</p>
+      </a>
+    </div>
+  </div>
+
   </div>
 
   <br height="18px">
