--- a/views/timesParallelPlot.ejs
+++ b/views/timesParallelPlot.ejs
@@ -14,8 +14,10 @@
   <button id="buttonHome"><a href="/">Home</a></button>
 
   <h1><span id="providerTitle">The Sunday Times </span>Overall Ranking</h1>
-
-  <svg id="parallelChart" height="780" width="1800"></svg>
+  
+  <div class="chartWrapper">
+    <svg id="parallelChart" height="780" width="1300"></svg>
+  </div>
 
   <button id="button_BarChart"><a href="/sundayTimes/byMetric">View Metrics in Detail</a></button>
 
@@ -35,7 +37,7 @@
 
   // set InnerVis height & width
   const margin = {
-    top: 25,
+    top: 50,
     right: 0,
     bottom: 10,
     left: 0
@@ -170,7 +172,8 @@
     .each(function (d) { d3.select(this).call(axis.scale(y[d])); })
     .append("text")
     .style("text-anchor", "middle")
-    .attr("y", -9)
+    .attr("transform", d3.transform('rotate(-20)'))
+    .attr("y", -15)
     .text(function (d) { return d; });
 
   //Adds a group to add and store a brush for each scale.
