changed landing page to include react svg

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -94,7 +94,7 @@
 
       <div id="portfolioWrapper__info">
         <h3 id="portfolioWrapper__info__h3">Visualising University Ranking Data Web App</h3>
-        <p id="portfolioWrapper__info_p">Supporting University Comparison Across 3 different league tables through data
+        <p id="portfolioWrapper__info_p">Supporting university comparison across 3 different league tables through data
           visaulisations</p>
       </div>
 
@@ -125,38 +125,49 @@
       <li>AWS (ECB2 + RDS)</li>
     </ul>
 
-    <div id="portfolioWrapper__circleWrapper">
-
-    </div>
-
     <br>    <br>    <br>
+    <br height = 4px>
 
-    <div class="sectionWrapper__textWrapper">
+    <div id="reactList_section" class="sectionWrapper__textWrapper">
 
       <div id="portfolioWrapper__info">
         <h3 id="portfolioWrapper__info__h3">React To do List App</h3>
-        <p id="portfolioWrapper__info_p">To do list application that displays dynamic data and saves to local storage
+        <p id="portfolioWrapper__info_p">To do list application that dynamically renders data and saves to local storage
         </p>
       </div>
 
-      <a class="anchor" href="https://jeremyelliott1.github.io/react-to-do-list/">
-        <p>Take a Look</p>
-      </a>
+      <div id="portfolioWrapper__buttonAndImg">
+        <div id="portfolioWrapper__ButtonWrapper">
+          <a class="anchor" href="https://jeremyelliott1.github.io/react-to-do-list/">
+            <p id="portfolioWrapper__ButtonWrapper__Button">Take a Look ></p>
+          </a>
+        </div>
+
+        <div id="portfolioWrapper__ImgWrapper">
+          <a class="anchor" href="https://jeremyelliott1.github.io/react-to-do-list/">
+            <img id="uniRankImg" src="res/React-icon.svg">
+          </a>
+        </div>
+      </div>
     </div>
+
+    <p id="portfolioWrapper__techListDesc">Tech used </p>
+    <ul id="portfolioWrapper__techList">
+      <li>React.js</li>
+      <li>JavaScript</li>
+      <li>HTML5</li>
+      <li>CSS3</li>
+    </ul>
   </div>
 
   </div>
 
   <br height="18px">
-
   <div class="sectionWrapper" id="cvWrapper">
-
     <a class="anchor" id=CvWrapper__downloadButton href="/downloadCV">
       <p>DownloadCV</p>
     </a>
   </div>
-
-
 </body>
 
 </html>
