--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,7 +1,3 @@
-html {
-  scroll-behavior: smooth;
-}
-
 body {
   min-width: 1100px;
 }
@@ -62,6 +58,10 @@ h3 {
 
 .sectionWrapper__h2 {
   padding-top: 2rem;
+}
+
+#portfolioWrapper{
+  height: 70rem;
 }
 
 #portfolioWrapper__info__h3 {
@@ -197,6 +197,10 @@ h3 {
   width: 18%;
   min-width: 200px;
   border-radius: 25%/50%;
+}
+
+#reactList_section{
+  margin-top: 10rem;
 }
 
 /* 
