--- a/public/css/timesParallelPlot.css
+++ b/public/css/timesParallelPlot.css
@@ -37,6 +37,7 @@ div.tooltip {
   border-radius: 6px;
   display: inline-block;
   transition: all 0.3s ease 0s;
+  margin-top: 2px;
 }
 
 #button_BarChart {
@@ -84,4 +85,34 @@ svg {
 .axis text {
   text-shadow: 0 1px 0 #fff, 1px 0 0 #fff, 0 -1px 0 #fff, -1px 0 0 #fff;
   cursor: move;
+}
+
+#tips_div{
+  margin-left: 14%;
+  margin-right: 14%;
+  margin-bottom: 3rem;
+}
+
+#tips_list{
+  padding-top: 10px;
+}
+
+.tips_list_item {
+  padding-bottom: 5px;
+}
+
+#header_wrapper {
+  display: block;
+  text-align: center;
+}
+
+#header {
+  display: inline-block;
+}
+
+#buttonTips_wrapper{
+  display: inline-block;
+  position: absolute;
+  right: 150px;
+  top: 45px;
 }
