modifictaions to index landing page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -34,13 +34,13 @@
       <h2 class="sectionWrapper__h2">About Me</h2>
 
 
-      <p id="aboutMeWrapper__p">As a recent graduate from Newcastle University on track to receive a distinction
-        for a MSc in computer science, I have developed and fostered the technical skills required of a software
-        developer. <br><br>
+      <p id="aboutMeWrapper__p">A recent Msc computer science graduate from Newcastle university on track to receive a distinction
+        with a keen interest data analytics and web development. Comfortable operating in unfamiliar enivornments reflected in my move from an economics undergraduate degree to a computer science masters program <br><br>
+
         The masters programme has exposed me to a wide variety of programming languages, design patterns & software
         development models. This has equipped me with a broad range of tools to problem solve by developing clean,
-        testable and high-quality code. Having a strong programming foundation enables me to quickly learn new skills to
-        adapt to the dynamic technology sector.</p>
+        testable and high-quality code.
+      </p>
 
       <p id="portfolioWrapper__pCloser">Please feel free to explore my website which includes my CV and my latest
         project
