--- a/public/css/index.css
+++ b/public/css/index.css
@@ -193,9 +193,9 @@ h3 {
   color: white;
   font-size: xx-large;
   background-color: grey;
-  height: 20%;
-  width: 18%;
-  min-width: 200px;
+  height: 10rem;
+  width: 20rem;
+  min-width: 20rem;
   border-radius: 25%/50%;
 }
 
