--- a/views/index.ejs
+++ b/views/index.ejs
@@ -35,7 +35,7 @@
 
 
       <p id="aboutMeWrapper__p">A recent Msc computer science graduate from Newcastle university on track to receive a distinction
-        with a keen interest data analytics and web development. Comfortable operating in unfamiliar enivornments reflected in my move from an economics undergraduate degree to a computer science masters program <br><br>
+        with a keen interest data analytics and web development. Comfortable operating in unfamiliar enivornments reflected in my move from an economics undergraduate degree to a computer science postgraduate degree. <br><br>
 
         The masters programme has exposed me to a wide variety of programming languages, design patterns & software
         development models. This has equipped me with a broad range of tools to problem solve by developing clean,
