--- a/views/comparison.ejs
+++ b/views/comparison.ejs
@@ -21,7 +21,7 @@
 
     <svg id="parallelChart" height="780" width="1300"></svg> 
 
-    <img id="weightingComparison_Img" img src="res/WeightingComparison" alt="UniversityRankingsWeightings">
+    <img id="weightingComparison_Img" img src="res/WeightingComparison.png" alt="UniversityRankingsWeightings">
 
     <div id="guardian" data-xaxis="<%= dataSet1 %>"></div>
     <div id="completeUni" data-xaxis="<%= dataSet2 %>"></div>
